--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "dayjs": "^1.11.13",
     "face-api.js": "^0.22.2",
     "preact": "^10.25.4",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "twemoji": "^14.0.2"
   },
   "devDependencies": {
