--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "dayjs": "^1.11.13",
     "face-api.js": "^0.22.2",
+    "heic2any": "^0.0.4",
     "preact": "^10.25.4",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
